- Add binary upload through form data

--- a/build-server/templates/tables.html
+++ b/build-server/templates/tables.html
@@ -61,7 +61,7 @@
                                             <tr>
                                                 <td>Commit</td>
                                                 <td class="truncated" colspan="3">
-                                                    {{ entry[2][0:10] }}
+                                                    {{ entry[2][:10] }}
                                                 </td>
                                             </tr>
                                             <tr>
