- Add sidebar for showing information in BuildViewer

--- a/build-viewer-qml/qml_source.qrc
+++ b/build-viewer-qml/qml_source.qrc
@@ -1,6 +1,8 @@
 <RCC>
-    <qresource prefix="/qmldata">
+    <qresource prefix="/">
         <file>BuildView.qml</file>
         <file>BuildViewForm.ui.qml</file>
+        <file>BuildItem.qml</file>
+        <file>DetailsPopup.qml</file>
     </qresource>
 </RCC>
