--- a/build-server/templates/tables.html
+++ b/build-server/templates/tables.html
@@ -26,6 +26,56 @@
             </div>
             <!-- /.col-lg-12 -->
         </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="page-header">Binary releases</h1>
+            </div>
+            <!-- /.col-lg-12 -->
+        </div>
+        <div class="row">
+            <div class="table-responsive table-bordered">
+                <table class="table table-hover" style="border-collapse:collapse">
+                    <thead>
+                        <tr>
+                            <th>Host</th>
+                            <th>Platform</th>
+                            <th>Time</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for entry in releases %}
+                        <tr data-toggle="collapse"
+                            data-target="#datarel{{ entry['bid'] }}"
+                            colspan="3"
+                            class="accordion-toggle">
+                            <td>{{ entry['host'] }}</td>
+                            <td>{{ entry['platform'] }}</td>
+                            <td>{{ entry['time'] }}</td>
+                        </tr>
+                        <tr>
+                        <td colspan="3" class="hiddenRow">
+                            <div class="accordion-body collapse" id="datarel{{ entry['bid'] }}">
+                                <a href="bin/{{ entry['bid'] }}" target="_blank">
+                                    (Link)
+                                </a>
+                            </div>
+                        </td>
+                        </tr>
+                        {% else %}
+                        <tr class="info" colspan="3">
+                            <td colspan="3" class="text-info">No builds to display!</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <h3 class="page-header">Build reports</h1>
+            </div>
+            <!-- /.col-lg-12 -->
+        </div>
         <!-- /.row -->
         <div class="row">
             <div class="table-responsive table-bordered">
@@ -41,7 +91,7 @@
                         {% for entry in entries %}
                         <tr data-toggle="collapse"
                             data-target="#data{{ entry['bid'] }}"
-                            colspan="4"
+                            colspan="3"
                         {% if entry['status'] == 0 %}
                             class="success accordion-toggle"
                         {% else %}
