--- a/build-server/templates/tables.html
+++ b/build-server/templates/tables.html
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Binary releases</h1>
+                <h2 class="page-header">Latest binary releases</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
