- Fixes to requirements.txt  - Separate source code into modules, more readable and modular (modular REST interface!)

--- a/build-server/templates/tables.html
+++ b/build-server/templates/tables.html
@@ -9,13 +9,13 @@
 
     <title>{{ title }} - {{ project }}</title>
     
-    <script src="{{ url_for('static', filename='dist/js/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='dist/js/bootstrap.min.js') }}"></script>
+    <script src="static/dist/js/jquery.min.js"></script>
+    <script src="static/dist/js/bootstrap.min.js"></script>
     
     <!-- Bootstrap Core CSS -->
-    <link href="{{ url_for('static', filename='dist/css/bootstrap-combined.min.css') }}" rel="stylesheet">
+    <link href="static/dist/css/bootstrap-combined.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="{{ url_for('static', filename='dist/css/sb-admin-2.css') }}" rel="stylesheet">
+    <link href="static/dist/css/sb-admin-2.css" rel="stylesheet">
 </head>
 
 <body>
